--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -53,6 +53,7 @@
                         android:paddingBottom="10dp"/>
 
                     <TextView
+                        android:id="@+id/selectShopName"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="xxxx"
@@ -69,6 +70,7 @@
                         android:paddingBottom="10dp"/>
 
                     <TextView
+                        android:id="@+id/selectRank"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="xxxx"
@@ -93,6 +95,7 @@
                     android:paddingBottom="10dp"/>
 
                 <TextView
+                    android:id="@+id/selectComment"
                     android:layout_width="fill_parent"
                     android:layout_height="fill_parent"
                     android:text="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
