--- a/app/src/main/res/layout/activity_input.xml
+++ b/app/src/main/res/layout/activity_input.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
 android:orientation="vertical" android:layout_width="match_parent"
 android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="fill_parent"
         android:layout_weight="1"
         android:gravity="center_vertical"
         android:orientation="vertical">
@@ -86,23 +86,18 @@ android:layout_height="match_parent">
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:orientation="horizontal"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_weight="1">
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:transitionGroup="false"
+            android:touchscreenBlocksFocus="false">
 
             <ImageView
-                android:id="@+id/inputPctur"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="40dp"
-                android:layout_marginBottom="30dp"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
-                android:scaleType="centerInside"
-                android:contentDescription="Puctur"/>
+                android:id="@+id/phot"
+                android:layout_width="300dp"
+                android:layout_height="30ss0dp"
+                android:src="@android:drawable/ic_input_add"
+                android:nestedScrollingEnabled="true" />
         </LinearLayout>
 
         <LinearLayout
@@ -130,4 +125,4 @@ android:layout_height="match_parent">
 
     </LinearLayout>
 
-</LinearLayout>
+</ScrollView>
